--- a/react/project/src/index.css
+++ b/react/project/src/index.css
@@ -12,7 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-
+  font-family: 'Roboto', sans-serif;
 }
 
 a {
